// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render as article element, when passed "article" for the element prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  font-size: 15px;
  line-height: 24px;
}

<article
  className="circuit-0"
  size="mega"
>
  ARTICLE heading
</article>
`;

exports[`Text should render as div element, when passed "div" for the element prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  font-size: 15px;
  line-height: 24px;
}

<div
  className="circuit-0"
  size="mega"
>
  DIV heading
</div>
`;

exports[`Text should render as p element, when passed "p" for the element prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  font-size: 15px;
  line-height: 24px;
}

<p
  className="circuit-0"
  size="mega"
>
  P heading
</p>
`;

exports[`Text should render with size giga, when passed "giga" for the size prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  font-size: 18px;
  line-height: 28px;
}

<p
  className="circuit-0"
  size="giga"
>
  giga heading
</p>
`;

exports[`Text should render with size kilo, when passed "kilo" for the size prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  font-size: 13px;
  line-height: 20px;
}

<p
  className="circuit-0"
  size="kilo"
>
  kilo heading
</p>
`;

exports[`Text should render with size mega, when passed "mega" for the size prop 1`] = `
.circuit-0 {
  font-weight: 400;
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  font-size: 15px;
  line-height: 24px;
}

<p
  className="circuit-0"
  size="mega"
>
  mega heading
</p>
`;
